--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body style="background-color:gray">
 
 <center>
-  <h1 style="color:edit">
+  <h1 style="color:red">
     Hello World!
   <p>
     This is the V2
